monitoring/victoriametrics/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: victoriametrics
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "victoriametrics.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoriametrics-vmsingle
          port: 8428
